@@ -91,6 +91,7 @@ my $expected = {
     is $ua->{url}, 'http://www.geocode.farm/v3/json/reverse/?lat=45.2040305&lat=lon&lat=-93.3995728', 'url matches';
 }
 
+
 package My::Mock;
 
 sub new {
@@ -99,9 +100,21 @@ sub new {
 }
 
 
+package LWP::UserAgent;
+
+sub get { }
+
+
+package HTTP::Response;
+
+sub is_success { }
+
+sub decoded_content { }
+
+
 package My::Mock::LWP::UserAgent;
 
-use base 'My::Mock';
+use base 'My::Mock', 'LWP::UserAgent';
 
 sub get {
     my ($self, $url) = @_;
@@ -112,7 +125,7 @@ sub get {
 
 package My::Mock::HTTP::Response;
 
-use base 'My::Mock';
+use base 'My::Mock', 'HTTP::Response';
 
 sub is_success {
     return 1;
